[project]
name = "civics-graph"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dgiltz", email = "giltzdeclan@gmail.com"},
]
dependencies = ["rdflib>=7.2.1", "boto3>=1.40.56", "playwright>=1.55.0", "docling>=2.58.0", "spacy>=3.8.7", "nltk>=3.9.2", "transformers>=4.57.1", "newspaper4k>=0.9.3.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "mypy>=1.18.2",
]
