[project]
name = "govt-graph"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dgiltz", email = "giltzdeclan@gmail.com"},
]
dependencies = ["rdflib>=7.3.0", "ipykernel>=7.0.1", "requests>=2.32.5", "python-dotenv>=1.1.1", "feedparser>=6.0.12", "pandas[tabulate]>=2.3.3", "pyyaml>=6.0.3", "praw>=7.8.1", "click>=8.3.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
govt-graph = "src.cli.__main__:cli"


[tool.pdm]
distribution = false

[tool.pdm.scripts]
govt-graph = {cmd = "python -m src.cli", env = {PYTHONPATH = "govt-graph"}}


[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "mypy>=1.18.2",
    "aws-cdk-lib>=2.221.0",
]
